ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
spec:
  ingressClassName: nextcloud-nginx
  rules:
    - host: next.edu.capttec.de
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  number: 80
            path: /
            pathType: Prefix
